<resources>
    <string name="app_name" translatable="false">Pet Booking</string>
    <string name="app_slogan">Esse app é animal</string>
    <string name="navigation_drawer_open">Abrir Menu Lateral</string>
    <string name="navigation_drawer_close">Fechar Menu Lateral</string>
    <string name="total_label" translatable="false">Total</string>
    <string name="edit_text">Editar</string>
    <string name="additional_label">Adicionais</string>
    <string name="observations_text">Observações&#8230;</string>
    <string name="fabric_app_id" translatable="false">fe0c61a27b92b4a7f90ab0fc8f69e3a4326250e5</string>
    <string name="facebook_app_id" translatable="false">1579605499022071</string>
    <string name="google_maps_key" translatable="false">AIzaSyBnnn32f_DTJWeClZRgjqHOQY08lyhTZH0</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1799017433691061</string>
    <string name="dashboard_title">Estabelecimentos</string>
    <string name="recover_password_title">Esqueci a senha</string>
    <string name="signup_title">Cadastro</string>
    <string name="profile_title">Perfil</string>
    <string name="pets_title">Meus Pets</string>
    <string name="new_pet_title">Preencha os dados do pet</string>
    <string name="search_title">Busca</string>
    <string name="cart_title">Carrinho de Agendamentos</string>
    <string name="payment_title">Pagamento</string>
    <string name="gender_male">Macho</string>
    <string name="gender_female">Fêmea</string>
    <string name="type_cat">Gato</string>
    <string name="type_dog">Cachorro</string>
    <string name="size_small">Pequeno</string>
    <string name="size_medium">Médio</string>
    <string name="size_big">Grande</string>
    <string name="size_giant">Gigante</string>
    <string name="coat_short">Curto</string>
    <string name="coat_medium">Médio</string>
    <string name="coat_long">Longo</string>
    <string name="table_size">Tabela de Portes</string>
    <string name="size_small_ex_dog"><b>Menor que 9kg</b> \nEx: Yorkshire, Chihuaua</string>
    <string name="size_small_ex_cat"><b>Menor que 33cm </b>\nEx: Cornish Rex, Egyptian mau</string>
    <string name="size_medium_ex_dog"><b>Entre 9kg e 22kg </b>\nEx: Beagle, Cocker Spaniel</string>
    <string name="size_medium_ex_cat"><b>Entre 33cm e 41cm </b>\nEx: Chartreux, Burmês</string>
    <string name="size_big_ex_dog"><b>Entre 22kg e 40kg </b>\nEx: Golden, Rottweiller</string>
    <string name="size_big_ex_cat"><b>Acima de 41cm </b>\nEx: Gato de Bengala, Maine Coon American Longhair</string>
    <string name="size_giant_ex_dog"><b>Acima de 40kg</b> \nEx: Dog Alemão, São Bernardo</string>
    <string name="temper_agitated">Agitado</string>
    <string name="temper_happy">Alegre</string>
    <string name="temper_lovely">Amoroso</string>
    <string name="temper_angry">Bravo</string>
    <string name="temper_playful">Brincalhão</string>
    <string name="temper_needy">Carente</string>
    <string name="temper_affectionate">Carinhoso</string>
    <string name="temper_docile">Dócil</string>
    <string name="temper_quiet">Tranquilo</string>
    <string name="temper_brave">Valente</string>
    <string name="presentation_1_title">Agende serviços para seus Pets, em poucos segundos!</string>
    <string name="presentation_2_title">Encontre o serviço desejado e agende o melhor horário!</string>
    <string name="presentation_3_title">Cuidar dos seus Pets nunca foi tão prático!</string>
    <string name="presentation_1_text">Banho, tosa, consultas veterinárias e muito mais!</string>
    <string name="presentation_2_text"></string>
    <string name="presentation_3_text">Seguro, Simples e rápido.</string>
    <string name="next">Próximo</string>
    <string name="skip">Pular</string>
    <string name="description">Encontre serviços para seu Pet \n mais póximos de você e agende online!</string>
    <string name="sign_up">Cadastro</string>
    <string name="login">Entrar</string>
    <string name="login_facebook">Entrar com <b>Facebook</b></string>
    <string name="app_terms_info">Utilizando o app, você concorda com os <b><u>Termos de uso</u></b>
        \n e com a <u>Política de Privacidade.</u></string>
    <string name="forgot_password">Esqueceu a senha ?</string>
    <string name="register_dialog_title">Cadastro de Usuário</string>
    <string name="hint_name">Nome Completo</string>
    <string name="hint_user_gender">Sexo</string>
    <string name="gender_user_male">Masculino</string>
    <string name="gender_user_female">Feminino</string>
    <string name="hint_cpf">CPF</string>
    <string name="hint_birthday">Data Nasc.</string>
    <string name="hint_email">Email</string>
    <string name="hint_email_cadastrado">Email cadstrado no Pet Booking</string>
    <string name="hint_zipcode">CEP</string>
    <string name="hint_city">Cidade</string>
    <string name="hint_state">UF</string>
    <string name="hint_neighborhood">Bairro</string>
    <string name="hint_complement">Complemento</string>
    <string name="hint_street">Rua</string>
    <string name="hint_street_number">Número</string>
    <string name="hint_phone">Celular</string>
    <string name="hint_password">Senha</string>
    <string name="hint_repeat_password">Conf. senha</string>
    <string name="register">Salvar</string>
    <string name="save">Cadastre-se</string>
    <string name="recover_password_text">Informe abaixo o email de cadastro \n associado à sua conta no Pet Booking.</string>
    <string name="recover_password_result">Verifique sua caixa de entrada. Você receberá \n instruções para \n recuperar sua senha.</string>
    <string name="email_empty">Informe o email.</string>
    <string name="recover_email_title">Recuperar Senha</string>
    <string name="recover_email_text">As instruções para recuperação foram enviadas para seu email.</string>
    <string name="send_button">Redefinir minha senha</string>
    <string name="my_pets">Meus Pets</string>
    <string name="search">Pesquisar</string>
    <string name="calendar">Agenda</string>
    <string name="payments">Pagamentos</string>
    <string name="payments_forms">Formas de pagamento</string>
    <string name="favorites">Favoritos</string>
    <string name="settings">Configurações</string>
    <string name="logout">Sair</string>
    <string name="notifications">Notificações</string>
    <string name="schedules">Agendamentos</string>
    <string name="new_pet">Novo Pet</string>
    <string name="contact_us">Entre em contato</string>
    <string name="terms_of_use">Termos de Uso</string>
    <string name="privacy_policy">Política de Privacidade</string>
    <string name="profile_dialog_title">Atualizar Perfil</string>
    <string name="remove_pet_title">Excluir Pet</string>
    <string name="remove_pet_text">Você está excluindo seu pet, e com isso
        será cancelado todos os seus agendamentos e históricos.</string>
    <string name="confirm_remove_pet">Quero Excluir</string>
    <string name="success_remove_pet">Pet removido com sucesso.</string>
    <string name="register_pet_dialog_title">Cadastro Pet</string>
    <string name="update_pet_dialog_title">Atualizar Pet</string>
    <string name="hint_pet_name">Nome do pet</string>
    <string name="hint_pet_birthday">Nascimento</string>
    <string name="hint_gender">Gênero</string>
    <string name="hint_type">Tipo</string>
    <string name="hint_size">Porte</string>
    <string name="hint_breed">Raça</string>
    <string name="hint_coat">Pelagem</string>
    <string name="color_pet">Cor da pelagem</string>
    <string name="hint_temper">Temperamento</string>
    <string name="hint_observation">Observação</string>
    <string name="color_white">Branco</string>
    <string name="color_black">Preto</string>
    <string name="color_brown">Marron</string>
    <string name="color_gray">Cinza</string>
    <string name="register_pet">Cadastrar Pet</string>
    <string name="business_street">%1$s, %2$s - %3$s</string>
    <string name="business_city">%1$s - %2$s</string>
    <string name="business_address">%1$s, %2$s, %3$s, %4$s</string>
    <plurals name="business_rating_count">
        <item quantity="one">%d Avaliação</item>
        <item quantity="other">%d Avaliações</item>
    </plurals>
    <string name="business_distance">%1$s Km</string>
    <string name="business_phone">Telefone: </string>
    <string name="business_tab_services">Serviços</string>
    <string name="business_tab_information">Informações</string>
    <string name="business_label_description">Descrição</string>
    <string name="business_label_contact">Contato</string>
    <string name="business_label_website">Site</string>
    <string name="business_label_social_network">Redes sociais</string>
    <string name="business_label_location">localização</string>
    <string name="business_label_location_max">Localização</string>
    <string name="business_label_reviews">Reviews</string>
    <string name="business_label_additional">Serviços Adicionais</string>
    <string name="business_service_price">R$ %1$s</string>
    <string name="business_service_finish">Finalizar Agendamento</string>
    <string name="call_button">Ligar</string>
    <string name="bussines_category">Categoria do Serviço</string>
    <string name="filter_hint">Nome do estabelecimento ou serviços</string>
    <string name="location_hint">Localização</string>
    <string name="city_neighborhood">Cidade ou bairro</string>
    <string name="filter_label">Filtre por categoria</string>
    <string name="filter">Buscar</string>
    <string name="kilometers">Quilômetro</string>
    <string name="push">Push</string>
    <string name="email">Email</string>
    <string name="sms">SMS</string>
    <string name="about">Sobre o app</string>
    <string name="support">Termos de uso</string>
    <string name="terms">Politicas de privacidade</string>
    <string name="reschedule">Reagendar</string>
    <string name="professional_label">Profissional</string>
    <string name="cancel_service_title">Cancelar Agendamento</string>
    <string name="cancel_service_button">Sim, cancelar agendamento</string>
    <string name="cancel_service_message">Olá, você está prestes a cancelar um
        agendamento já configurado. Quando cancelar não será possível reagendar o mesmo serviço.\n \n Deseja realmente cancelar?</string>
    <string name="agenda_empty_title">Ops, sua agenda encontra-se vazia.</string>
    <string name="agenda_empty_text">O que você esta esperando para agendar os mais variados serviços para seus pets no Pet Booking?</string>
    <string name="choose_professional">Escolha o profissional</string>
    <string name="continue_scheduling">Continuar Agendamento</string>
    <string name="cancel_appointment_title">Atenção!</string>
    <string name="cancel_appointment_text">Todos os serviços agendados serão perdidos ao voltar. Deseja cancelar?</string>
    <string name="cancel_service_text">Esse serviço será cancelado. Deseja continuar?</string>
    <string name="confirm_cancel_appointment">Quero cancelar</string>
    <string name="appointment_date_info">%1$s de %2$s, %3$s - %4$s</string>
    <string name="confirm_scheduling">Agendar</string>
    <string name="dialog_picture_title">Selecionar foto de perfil</string>
    <string name="dialog_picture_text">Selecione o método de entrada de imagens que deseja usar.</string>
    <string name="dialog_button_ok">Ok</string>
    <string name="dialog_button_close">Fechar</string>
    <string name="favorites_empty_title">Você ainda não possui favoritos.</string>
    <string name="favorites_empty_message">Marque seus estabelecimentos favoritos e acesse-os rapidamente nessa tela.</string>
    <string name="pets_empty_title">Ops! Você ainda não tem</string>
    <string name="pets_empty_message">nenhum pet adicionado.</string>
    <string name="add_pet">Adicionar pet</string>
    <string name="view_bussines">Visualizar Estabelecimentos</string>
    <string name="enviar">Enviar</string>
</resources>