<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/my_pets"
            android:icon="@drawable/ic_menu_pets"
            android:title="@string/my_pets" />

        <item
            android:id="@+id/calendar"
            android:icon="@drawable/ic_menu_calendar"
            android:title="@string/calendar" />

        <item
            android:id="@+id/payments"
            android:icon="@drawable/ic_paymenticon"
            android:title="@string/payments_forms" />


        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/close_menu"
            android:title="@string/logout" />

    </group>

</menu>
