<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.petbooking.Components.MenuItem
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:item_icon="@drawable/ic_menu_camera"
        app:item_text="@string/search" />

    <com.petbooking.Components.MenuItem
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:item_icon="@drawable/ic_menu_camera"
        app:item_text="@string/calendar" />

    <com.petbooking.Components.MenuItem
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:item_icon="@drawable/ic_menu_camera"
        app:item_text="@string/payments" />

    <com.petbooking.Components.MenuItem
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:item_icon="@drawable/ic_menu_camera"
        app:item_text="@string/favorites" />

    <com.petbooking.Components.MenuItem
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:item_icon="@drawable/ic_menu_camera"
        app:item_text="@string/settings" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/spacing_xmicro"
            android:text="@string/logout"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_menu_camera" />
    </LinearLayout>

</LinearLayout>