<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_background"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_tiny"
        android:text="@string/table_size"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        android:textStyle="bold" />


    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_tiny">

        <TextView
            android:id="@+id/pet_size_small"
            android:layout_height="@dimen/spacing_xnormal"
            android:gravity="center_vertical|end"
            android:paddingEnd="@dimen/spacing_tiny"
            android:paddingRight="@dimen/spacing_tiny"
            android:text="@string/size_small"
            android:textSize="14sp"
            app:layout_widthPercent="30%" />

        <TextView
            android:layout_height="@dimen/spacing_xnormal"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical|start"
            android:paddingLeft="@dimen/spacing_tiny"
            android:paddingStart="@dimen/spacing_tiny"
            android:text="@string/size_small_ex_dog"
            android:textSize="14sp"
            app:layout_widthPercent="65%" />

        <TextView
            android:id="@+id/pet_size_medium"
            android:layout_height="@dimen/spacing_xnormal"
            android:layout_below="@id/pet_size_small"
            android:gravity="center_vertical|end"
            android:paddingEnd="@dimen/spacing_tiny"
            android:paddingRight="@dimen/spacing_tiny"
            android:text="@string/size_medium"
            android:textSize="14sp"
            app:layout_widthPercent="30%" />

        <TextView
            android:layout_height="@dimen/spacing_xnormal"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/pet_size_small"
            android:gravity="center_vertical|start"
            android:paddingLeft="@dimen/spacing_tiny"
            android:paddingStart="@dimen/spacing_tiny"
            android:text="@string/size_medium_ex_dog"
            android:textSize="14sp"
            app:layout_widthPercent="65%" />

        <TextView
            android:id="@+id/pet_size_big"
            android:layout_height="@dimen/spacing_xnormal"
            android:layout_below="@id/pet_size_medium"
            android:gravity="center_vertical|end"
            android:paddingEnd="@dimen/spacing_tiny"
            android:paddingRight="@dimen/spacing_tiny"
            android:text="@string/size_big"
            android:textSize="14sp"
            app:layout_widthPercent="30%" />

        <TextView
            android:layout_height="@dimen/spacing_xnormal"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/pet_size_medium"
            android:gravity="center_vertical|start"
            android:paddingLeft="@dimen/spacing_tiny"
            android:paddingStart="@dimen/spacing_tiny"
            android:text="@string/size_big_ex_dog"
            android:textSize="14sp"
            app:layout_widthPercent="65%" />

        <TextView
            android:id="@+id/pet_size_giant"
            android:layout_height="@dimen/spacing_xnormal"
            android:layout_below="@id/pet_size_big"
            android:gravity="center_vertical|end"
            android:paddingEnd="@dimen/spacing_tiny"
            android:paddingRight="@dimen/spacing_tiny"
            android:text="@string/size_giant"
            android:textSize="14sp"
            app:layout_widthPercent="30%" />

        <TextView
            android:layout_height="@dimen/spacing_xnormal"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/pet_size_big"
            android:gravity="center_vertical|start"
            android:paddingLeft="@dimen/spacing_tiny"
            android:paddingStart="@dimen/spacing_tiny"
            android:text="@string/size_giant_ex_dog"
            android:textSize="14sp"
            app:layout_widthPercent="65%" />

        <View
            android:layout_width="1dp"
            android:layout_height="@dimen/spacing_xnormal"
            android:layout_toEndOf="@id/pet_size_small"
            android:layout_toRightOf="@id/pet_size_small"
            android:background="@color/text_color" />

        <View
            android:layout_width="1dp"
            android:layout_height="@dimen/spacing_xnormal"
            android:layout_below="@id/pet_size_small"
            android:layout_toEndOf="@id/pet_size_small"
            android:layout_toRightOf="@id/pet_size_small"
            android:background="@color/text_color" />

        <View
            android:layout_width="1dp"
            android:layout_height="@dimen/spacing_xnormal"
            android:layout_below="@id/pet_size_medium"
            android:layout_toEndOf="@id/pet_size_small"
            android:layout_toRightOf="@id/pet_size_small"
            android:background="@color/text_color" />

        <View
            android:layout_width="1dp"
            android:layout_height="@dimen/spacing_xnormal"
            android:layout_below="@id/pet_size_big"
            android:layout_toEndOf="@id/pet_size_small"
            android:layout_toRightOf="@id/pet_size_small"
            android:background="@color/text_color" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/pet_size_small"
            android:background="@color/text_color" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/pet_size_medium"
            android:background="@color/text_color" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/pet_size_big"
            android:background="@color/text_color" />

    </android.support.percent.PercentRelativeLayout>

    <Button
        android:id="@+id/okButton"
        style="@style/AppTheme.PrimaryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xmicro"
        android:background="@drawable/primary_button"
        android:text="@string/dialog_button_ok" />

</LinearLayout>