<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.petbooking.UI.RecoverPassword.RecoverPasswordActivity">

    <include
        layout="@layout/toolbar_main"
        android:visibility="visible"
        />

    <TextView
        android:id="@+id/forgotPasswordInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_xmicro"
        android:layout_marginLeft="@dimen/spacing_xtiny"
        android:layout_marginRight="@dimen/spacing_xtiny"
        android:layout_marginStart="@dimen/spacing_xmicro"
        android:layout_marginTop="@dimen/spacing_xlarge"
        android:text="@string/recover_password_text"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/recoverEmailTL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_xtiny"
        android:layout_marginLeft="@dimen/spacing_xtiny"
        android:layout_marginRight="@dimen/spacing_xtiny"
        android:layout_marginStart="@dimen/spacing_xtiny"
        android:layout_marginTop="@dimen/spacing_xtiny"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordInfo">

        <EditText
            android:id="@+id/recoverEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/spacing_xmicro"
            android:hint="@string/hint_email_cadastrado"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            android:fontFamily="@font/corporativesansrdaltregular"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/infoRecoverResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_small"
        android:layout_marginEnd="@dimen/spacing_xmicro"
        android:layout_marginLeft="@dimen/spacing_xtiny"
        android:layout_marginRight="@dimen/spacing_xtiny"
        android:layout_marginStart="@dimen/spacing_xmicro"
        android:text="@string/recover_password_result"
        android:textAlignment="center"
        android:textColor="#858585"
        app:layout_constraintBottom_toTopOf="@+id/sendButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_xtiny"
        android:layout_marginEnd="@dimen/spacing_xtiny"
        android:layout_marginLeft="@dimen/spacing_xtiny"
        android:layout_marginRight="@dimen/spacing_xtiny"
        android:layout_marginStart="@dimen/spacing_xtiny"
        android:background="@drawable/primary_button"
        android:text="@string/enviar"
        android:theme="@style/AppTheme.PrimaryButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>
